--- a/src/css/Products.css
+++ b/src/css/Products.css
@@ -256,14 +256,35 @@ select:focus {
   margin-bottom: 0px;
 }
 
+.admin-description-container { 
+  overflow-x: hidden;
+  overflow-y: scroll;
+}
+
 .admin-description-container p {
   opacity: 90%;
   margin-left: 5px;
   color: rgb(71, 99, 87);
   margin-top: 0px;
   flex: 1;
-  width: 100%;
-  height: 50px;
-  overflow-x: hidden;
-  overflow-y: scroll;
+  font-size: 12px;
+  text-align: justify;
+  width: 98%;
+  height: 37px;
+}
+
+.admin-description-container::-webkit-scrollbar {
+  width: 10px; 
+  height: 10px; 
+}
+
+.admin-description-container::-webkit-scrollbar-thumb {
+  background-color: #88888800; 
+  border-radius: 5px; 
+  border: 2px solid #ffffff00; 
+}
+
+.admin-description-container::-webkit-scrollbar-track {
+  background: #f1f1f100; 
+  border-radius: 5px;
 }
